--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is an app for manipulating text in a way you want"
+      content="TextUtils is a word counter and character counter utility app for manipulating text in a way you want.
+      You can remove extra spaces as well as convert your text from uppercase to lowercase and vice versa"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
 
